# minimal-artemis-alloy

./: Cargo.toml  README.md
.github/workflows/: contracts.yml
crates/artemis-core/: Cargo.toml
crates/artemis-core/src/: lib.rs  types.rs  wrapper.rs
crates/artemis-core/src/collectors/: block_collector.rs  log_collector.rs  mempool_collector.rs
crates/artemis-core/src/executors/: mempool_executor.rs  mod.rs
crates/artemis-core/tests/: main.rs
crates/clients/chainbound/: Cargo.toml  README.md
crates/clients/opensea-v2/: Cargo.toml
crates/strategies/mev-share-uni-arb/: Cargo.toml
crates/strategies/mev-share-uni-arb/bindings/: Cargo.toml
examples/mev-share-arb/: Cargo.toml
