[workspace]
members = [
    "bin/artemis",
    "bin/cli",
    "crates/artemis-core",
    "crates/generator",
    "crates/strategies/*",
    "crates/clients/*", 
    "examples/*",
]
resolver = "2"

default-members = ["bin/artemis", "bin/cli"]

[workspace.dependencies]
##alloy
alloy = { version = "0.4.2", features = ["full"] }


[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
