[package]
name = "artemis-core"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## alloy
alloy.workspace = true

## async
async-trait = "0.1.86"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }

## misc
anyhow = "1.0.70"
futures = "0.3.31"
tracing = "0.1.37"
serde_json = "1.0.138"

[dev-dependencies]
alloy-node-bindings.workspace = true